RESOLVED FIXED293628
Unified Build Fix for ElementData.
https://bugs.webkit.org/show_bug.cgi?id=293628
Summary Unified Build Fix for ElementData.
Megan Gardner
Reported 2025-05-27 11:58:04 PDT
Unified Build Fix for ElementData.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-27 11:58:21 PDT
Megan Gardner
Comment 2 2025-05-27 12:03:01 PDT
EWS
Comment 3 2025-05-27 13:07:11 PDT
Committed 295459@main (73ae33f51a33): <https://commits.webkit.org/295459@main> Reviewed commits have been landed. Closing PR #45953 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.