Unified Build Fix for ElementData. https://bugs.webkit.org/show_bug.cgi?id=293628 rdar://152101098

Unreviewed build fix.

Found this issue while working on another bug,
but I didn't end up adding the file that exposed
the issues, so doing this as a separate fix.

* Source/WebCore/dom/ElementData.h:

Canonical link: https://commits.webkit.org/295459@main